--- a/public/main.css
+++ b/public/main.css
@@ -27,3 +27,17 @@ form input.button {
     position:relative;
     bottom:8px;
 }
+ul#friends li {
+    list-style:none;
+    margin:10px;
+    padding:5px;
+    background-color:#454545;
+    color:#8BC53F;
+    font-weight:bold;
+}
+ul#friends li:hover {
+    background-color:#333;
+}
+ul#friends li img {
+    padding-right:15px;
+}
